@@ -63,7 +63,7 @@
  * Public Functions
  ************************************************************************************/
 
-/**************************************************************************
+/************************************************************************************
  * Name: up_switchcontext
  *
  * Description:
@@ -75,7 +75,7 @@
  * Return:
  *   None
  *
- **************************************************************************/
+ ************************************************************************************/
 
 	.thumb_func
 	.globl	up_switchcontext
